Fixes send message button too close to recatcha tag.

--- a/css/main.css
+++ b/css/main.css
@@ -244,6 +244,6 @@
 
     /* Center Send Message Button */
     .submit-email-btn {
-        margin: 0 auto 20px auto;
+        margin: 10px auto 20px auto;
     }
 }
